# config

./: .gitignore  AGENTS.md  CMakeLists.txt  README.asciidoc  README.md  coro_reduce.cuh  cuda.h  document.xml  example.cpp  kernel.cu  kernel.cuh  main.cu  main_coro.cu  main_reduce.cu  mock_cub.h  new_computer.sh  package.json  reduce.cu  reduce.cuh  stylesheet.xsl  tsconfig.json
game_of_life/: README.md  main.py  test_game_of_life.py
public/: index.html  main.js
src/: aish.cpp  aish.hpp  main.cpp  main.ts
tests/: AishTests.cpp  JobControlTests.cpp
